@@ -188,6 +188,11 @@
 #
 #GLOBAL_RELAY
 
+# Tempfail all mail.  Wait SECONDS between SMTP banner messages.  This also
+# enables GLOBAL_RELAY, tho no mail is ever accepted.
+#
+#SMTP_TARPIT			SECONDS
+
 # Enable SASL.
 #
 #SASL_ON
