@@ -108,6 +108,7 @@ extern int				simta_smtp_outbound_delivered;
 extern int				simta_max_failed_rcpts;
 extern int				simta_dns_config;
 extern int				simta_global_relay;
+extern int				simta_smtp_tarpit;
 extern int				simta_debug;
 extern int				simta_expand_debug;
 extern int				simta_verbose;
